fix: page is no more dependent on number of elements in grid, made grid scrollable, removed vertical padding which caused scrollbar to appear

--- a/src/components/pages/BookCatalog/BookCatalog.module.css
+++ b/src/components/pages/BookCatalog/BookCatalog.module.css
@@ -2,12 +2,18 @@
   display: flex;
   max-width: var(--content-width);
   margin: 0 auto;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .wrapper_main,
 .wrapper_empty {
   flex: 1;
+}
+
+.wrapper_main {
+  height: calc(100dvh - var(--header-height));
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 .wrapper_empty {
